--- a/.github/workflows/ubuntu-build.yml
+++ b/.github/workflows/ubuntu-build.yml
@@ -28,5 +28,11 @@ jobs:
       - name: Run PyInstaller
         run: |
           cd git-jock
-          pyinstaller jock/__main__.py --onefile --name jock
-#          exit 2
+          pyinstaller --help
+          pyinstaller jock/__main__.py --name jock
+
+      - name: Run jock
+        run: ./git-jock/dist/jock
+
+#      - name: Fail
+#        run: exit 2
