--- a/.github/workflows/matrix-build.yml
+++ b/.github/workflows/matrix-build.yml
@@ -3,6 +3,8 @@ name: Matrix Build
 on:
   workflow_dispatch:
   push:
+    tags:
+      - 'v*'
 
 jobs:
   release-matrix:
@@ -32,11 +34,35 @@ jobs:
       - name: Run PyInstaller
         run: |
           cd git-jock
-          pyinstaller --help
-          pyinstaller jock/__main__.py --name jock
+          pyinstaller jock/__main__.py --onefile --name jock
 
-      - name: Ls
-        run: ls ./git-jock/dist/jock
+      - name: Set Zip Name
+        run: echo "ZIP_NAME=jock-$(uname)-$(uname -m)" >> $GITHUB_ENV
+
+      - name: Zip
+        run: zip -j $ZIP_NAME git-jock/dist/jock/jock
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./$ZIP_NAME.zip
+          asset_name: $ZIP_NAME.zip
+          asset_content_type: application/zip
 
 #      - name: Run jock
 #        run: ./git-jock/dist/jock
