--- a/.github/workflows/matrix-build.yml
+++ b/.github/workflows/matrix-build.yml
@@ -60,8 +60,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./$ZIP_NAME.zip
-          asset_name: $ZIP_NAME.zip
+          asset_path: './$ZIP_NAME.zip'
+          asset_name: '$ZIP_NAME.zip'
           asset_content_type: application/zip
 
 #      - name: Run jock
