Moved release creation

--- a/.github/workflows/ubuntu-build.yml
+++ b/.github/workflows/ubuntu-build.yml
@@ -1,38 +1,38 @@
-name: Ubuntu Build
-
-on:
-  workflow_dispatch:
-  push:
-
-jobs:
-  release-ubuntu-1804:
-    name: Release Ubuntu
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.7
-
-      - name: Clone git-jock
-        run: git clone https://github.com/GavinF17/git-jock.git
-
-      - name: Install git-jock dependencies
-        run: |
-          cd git-jock
-          pip install -r requirements.txt
-
-      - name: Install PyInstaller
-        run: pip install pyinstaller
-
-      - name: Run PyInstaller
-        run: |
-          cd git-jock
-          pyinstaller --help
-          pyinstaller jock/__main__.py --onefile --name jock
-
-      - name: Zip
-        run: zip -j jock-$(uname)-$(uname -m) git-jock/dist/jock
-
-      - name: Fail
-        run: exit 2
+#name: Ubuntu Build
+#
+#on:
+#  workflow_dispatch:
+#  push:
+#
+#jobs:
+#  release-ubuntu-1804:
+#    name: Release Ubuntu
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Setup Python
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: 3.7
+#
+#      - name: Clone git-jock
+#        run: git clone https://github.com/GavinF17/git-jock.git
+#
+#      - name: Install git-jock dependencies
+#        run: |
+#          cd git-jock
+#          pip install -r requirements.txt
+#
+#      - name: Install PyInstaller
+#        run: pip install pyinstaller
+#
+#      - name: Run PyInstaller
+#        run: |
+#          cd git-jock
+#          pyinstaller --help
+#          pyinstaller jock/__main__.py --onefile --name jock
+#
+#      - name: Zip
+#        run: zip -j jock-$(uname)-$(uname -m) git-jock/dist/jock
+#
+#      - name: Fail
+#        run: exit 2
