--- a/.github/workflows/matrix-build.yml
+++ b/.github/workflows/matrix-build.yml
@@ -7,8 +7,33 @@ on:
       - 'v*'
 
 jobs:
+  create-release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+
+      - name: Store Upload URL
+        run: echo ${{ steps.create_release.outputs.upload_url }} > upload_url.txt
+
+      - name: Upload upload_url
+        uses: actions/upload-artifact@v2
+        with:
+          name: upload_url
+          path: ./upload_url.txt
+
   release-matrix:
     name: Release Matrix
+    needs: create-release
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -42,16 +67,10 @@ jobs:
       - name: Zip
         run: zip -j $ZIP_NAME git-jock/dist/jock
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Download upload_url
+        uses: actions/download-artifact@v2
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
+          name: upload_url
 
       - name: Upload Release Asset
         id: upload-release-asset
@@ -59,7 +78,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: '$(cat ./upload_url.txt)'
           asset_path: './$ZIP_NAME.zip'
           asset_name: '$ZIP_NAME.zip'
           asset_content_type: application/zip
