--- a/.github/workflows/matrix-build.yml
+++ b/.github/workflows/matrix-build.yml
@@ -78,9 +78,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: '$(cat ./upload_url.txt)'
-          asset_path: './$ZIP_NAME.zip'
-          asset_name: '$ZIP_NAME.zip'
+          upload_url: "$(cat ./upload_url.txt)"
+          asset_path: "./$ZIP_NAME.zip"
+          asset_name: "$ZIP_NAME.zip"
           asset_content_type: application/zip
 
 #      - name: Run jock
