--- a/.github/workflows/matrix-build.yml
+++ b/.github/workflows/matrix-build.yml
@@ -77,8 +77,8 @@ jobs:
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          UPLOAD_URL: $(cat ./upload_url.txt)
-          ZIP_FILE: $ZIP_NAME.zip
+          UPLOAD_URL: "$(cat ./upload_url.txt)"
+          ZIP_FILE: "$ZIP_NAME.zip"
         with:
           upload_url: UPLOAD_URL
           asset_path: ${{ env.ZIP_FILE }}
