--- a/action.yml
+++ b/action.yml
@@ -11,7 +11,7 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - run: echo Hello ${{ inputs.server-list }}.
+    - run: echo Hello ${{ inputs }}.
       shell: bash
     - id: random-number-generator
       run: echo "::set-output name=random-id::$(echo $RANDOM)"
