--- a/.github/workflows/subtree.yml
+++ b/.github/workflows/subtree.yml
@@ -6,7 +6,8 @@ jobs:
     name: A test job
     steps:
       - run: |
-        mkdir intcomm && cd intcomm
+        mkdir intcomm
+        cd intcomm
         git init
         git remote add intellij-community git@github.com:JetBrains/intellij-community.git
         git fetch intellij-community
