--- a/.github/workflows/subtree.yml
+++ b/.github/workflows/subtree.yml
@@ -9,5 +9,5 @@ jobs:
           mkdir intcomm
           cd intcomm
           git init
-          git remote add intellij-community git@github.com:JetBrains/intellij-community.git
+          git remote add intellij-community https://github.com/JetBrains/intellij-community.git
           git fetch intellij-community
