Changed strategy again...

--- a/.github/workflows/subtree.yml
+++ b/.github/workflows/subtree.yml
@@ -10,8 +10,7 @@ jobs:
         run: |
           mkdir /tmp/intellij-community
           cd /tmp/intellij-community
-          git init
-          git remote add -f origin https://github.com/JetBrains/intellij-community.git
+          git clone --depth 1 --filter=blob:none --no-checkout https://github.com/JetBrains/intellij-community.git .
           git checkout master -- plugins/java-decompiler/engine
           git subtree push --prefix=plugins/java-decompiler/engine $GITHUB_WORKSPACE temp
       - name: Merge Changes
