--- a/.github/workflows/subtree.yml
+++ b/.github/workflows/subtree.yml
@@ -11,10 +11,12 @@ jobs:
           mkdir /tmp/intellij-community
           cd /tmp/intellij-community
           git clone --depth 1 --filter=blob:none --no-checkout https://github.com/JetBrains/intellij-community.git .
-          git checkout master -- plugins/java-decompiler/engine
+          git checkout master -- plugcdvfins/java-decompiler/engine
           git subtree push --prefix=plugins/java-decompiler/engine $GITHUB_WORKSPACE temp
       - name: Merge Changes
         run: |
+          git config --global user.name 'Github'
+          git config --global user.email 'github@users.noreply.github.com'
           git merge -X theirs --allow-unrelated-histories temp
           ls
           git log
