--- a/.github/workflows/conditional-needs-failing.yml
+++ b/.github/workflows/conditional-needs-failing.yml
@@ -19,7 +19,7 @@ jobs:
 
   run-two:
     runs-on: 'ubuntu-latest'
-    needs: one
+    needs: run-one
     if: always() && contains(fromJson(inputs.environments), 'two')
     environment: two
     steps:
@@ -27,7 +27,7 @@ jobs:
 
   run-three:
     runs-on: 'ubuntu-latest'
-    needs: one
+    needs: run-one
     if: always() && contains(fromJson(inputs.environments), 'three')
     environment: three
     steps:
@@ -35,7 +35,7 @@ jobs:
 
   run-four:
     runs-on: 'ubuntu-latest'
-    needs: one
+    needs: run-one
     if: always() && contains(fromJson(inputs.environments), 'four')
     environment: four
     steps:
@@ -43,7 +43,7 @@ jobs:
 
   run-five:
     runs-on: 'ubuntu-latest'
-    needs: one
+    needs: run-one
     if: always() && contains(fromJson(inputs.environments), 'five')
     environment: five
     steps:
